2001-09-04  Robert Graham Merkel  <rgmerk@mira.net>

	* several SX-related .c files: replaced use of kvp_frame_{set,get}_slot, 
	with {set,get}_slot_path, replaced literals with #defines.

	* src/engine/SchedXaction.h: #define names for kvp_frame keys.

	* src/engine/dialog-sx-from-trans.h: fix freqspec and date/time setting bugs.

	* src/gnome/glade/sched-xact.glade: rename several items in editor dialog
	to match UI code.

2001-09-02  Dave Peticolas  <dave@krondo.com>

	* src/backend/file/sixtp-dom-generators.c (add_kvp_value_node):
	fix warning in case of empty kvp sub-frame

	* src/backend/file/io-gncxml-v2.c (clear_up_account_commodity):
	fix scu values

	* src/engine/Account.c (xaccInitAccount): initialize scu to 0

2001-09-02  Christian Stimming  <stimming@tuhh.de>

	* src/report/standard-reports/average-balance.scm: Ben Stanley
	<bds02@uow.edu.au>'s report fix.

2001-08-31  Dave Peticolas  <dave@krondo.com>

	* src/engine/Scrub.c: don't create accounts with no currency

2001-08-30  Robert Graham Merkel  <rgmerk@mira.net>

	* src/gnome/dialog-sx-from-trans.{ch}: New files, providing easy way
	to turn existing transactions into SX's.

	* src/engine/SX-ttinfo.{ch}: provide data structure for easy building
	of template transactions for SX.

	* src/engine/GNCId.h: changed include guards to fix in with policy.

	* src/engine/SchedXaction.{ch}: added function to turn structures in 
	SX-ttinfo.c into real template trans, fixed bugs.

	* src/engine/kvp-doc.txt: updated docs.

	* src/gnome/glade/sched-xact.glade: added dialog for SX-from-trans

	* src/gnome/dialog-commodity.h: fixed include guards (previously, name
	started with underscore).

	* src/gnome/window-register.c: added code to let user activate 
	SX-from-trans dialog

2001-08-25  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/gnc-html-guppi.c: activate the [xy]_axis_label
	options.

2001-08-22  Dave Peticolas  <dave@krondo.com>

	* src/gnome/query-user.c